editing modal video

--- a/year-2010.html
+++ b/year-2010.html
@@ -179,12 +179,21 @@
                 <p class="content-text-white content-text-next">2012 г., Богучанская ГЭС</p>
             </div>
         </div>
-        <div class="content-row contemporary__implementation wow fadeInLeft">
-            <h3 class="content-data contemporary__data">2011</h3>
-            <p class="content-wrap content-text-next contemporary__paragraph">РусГидро приступило к реализации
-                не имеющей аналогов
-                программы комплексной модернизации, в рамках которой запланирована замена половины парка
-                турбин, генераторов и трансформаторов ГЭС и ГАЭС</p>
+        <div class="content-row contemporary__box">
+            <div class="content-row contemporary__box--info wow fadeInLeft">
+                <h3 class="content-data contemporary__data">2011</h3>
+                <p class="content-wrap content-text-next contemporary__paragraph">РусГидро приступило к реализации
+                    не имеющей аналогов
+                    программы комплексной модернизации, в рамках которой запланирована замена половины парка
+                    турбин, генераторов и трансформаторов ГЭС и ГАЭС</p>
+            </div>
+            <div class="content-row contemporary__box--info wow fadeInLeft">
+                <h3 class="content-data contemporary__data">2012</h3>
+                <p class="content-wrap content-text-next contemporary__paragraph">В Красноярском крае на реке Ангаре
+                    пущены первые три гидроагрегата Богучанской ГЭС мощностью 2 997 МВт. Ее строительство велось
+                    совместно с компанией РУСАЛ.</p>
+            </div>
+
         </div>
         <div class="contemporary__transfer">
             <div class="contemporary__turbine wow fadeInLeft">
@@ -222,23 +231,14 @@
                 <p class="content-text-white content-text-next">2013 г., Усть-Среднеканская ГЭС</p>
             </div>
         </div>
-        <div class="content-row contemporary__box">
-            <div class="content-row contemporary__box--info wow fadeInLeft">
-                <h3 class="content-data contemporary__data">2012</h3>
-                <p class="content-wrap content-text-next contemporary__paragraph">В Красноярском крае на реке Ангаре
-                    пущены первые три гидроагрегата Богучанской ГЭС мощностью 2 997 МВт. Ее строительство велось
-                    совместно с компанией РУСАЛ.</p>
-            </div>
-            <div class="content-row contemporary__box--info wow fadeInLeft">
-                <h3 class="content-data contemporary__data">2013</h3>
-                <p class="content-wrap content-text-next contemporary__paragraph">В Магаданской области
-                    введены в эксплуатацию первые два гидроагрегата Усть-Среднеканской ГЭС мощностью 168 МВт.
-                    Проектная мощность станции − 570 МВт</p>
-            </div>
+        <div class="content-row contemporary__implementation wow fadeInLeft">
+            <h3 class="content-data contemporary__data">2013</h3>
+            <p class="content-wrap content-text-next contemporary__paragraph">В Магаданской области
+                введены в эксплуатацию первые два гидроагрегата Усть-Среднеканской ГЭС мощностью 168 МВт.
+                Проектная мощность станции − 570 МВт</p>
         </div>
         <div class="contemporary__robot wow fadeInLeft">
             <div class="content-row contemporary__robot--box">
-                <h3 class="contemporary__robot--data">2016</h3>
                 <p class="contemporary__robot--name"> РусГидро приступило к созданию единых расчетно-информационных
                     центров
                     (ЕРИЦ) в регионах присутствия энергосбытовых компаний. Пилотным регионом стал Красноярский край. В
@@ -252,22 +252,40 @@
                 <img src="img/home/loading.gif" data-src="img/contemporary/robot-big.jpg" alt="открытие ЕРИЦ"
                      class="b-lazy content-image contemporary__robot--block">
                 <div class="contemporary__robot--info">
-                    <p class="content-text-white content-text-next">2010-е гг., открытие ЕРИЦ</p>
+                    <p class="content-text-white content-text-next">2016-е гг., открытие ЕРИЦ</p>
                 </div>
             </div>
         </div>
         <div class="contemporary__panel">
-            <div class="content-row contemporary__panel--text wow fadeInLeft">
-                <h3 class="content-data contemporary__data">2015</h3>
-                <p class="content-wrap content-text-next contemporary__paragraph">В селе Новиково на Сахалине
-                    введен в эксплуатацию ветро-
-                    дизельный комплекс мощностью 450 кВт,
-                    в Якутии − крупнейшая солнечная
-                    электростанция за Полярным кругом
-                    СЭС Батагай мощностью 1 000 кВт.
-                    В Дагестане запущена Гоцатлинская
-                    ГЭС мощностью 100 МВт.</p>
+            <div class="contemporary__panel--text">
+                <div class="content-row  wow fadeInLeft">
+                    <h3 class="content-data contemporary__data">2015</h3>
+                    <p class="content-wrap content-text-next contemporary__paragraph">В селе Новиково на Сахалине
+                        введен в эксплуатацию ветро-
+                        дизельный комплекс мощностью 450 кВт,
+                        в Якутии − крупнейшая солнечная
+                        электростанция за Полярным кругом
+                        СЭС Батагай мощностью 1 000 кВт.
+                        В Дагестане запущена Гоцатлинская
+                        ГЭС мощностью 100 МВт.</p>
+                </div>
+                <div class="content-row  wow fadeInLeft">
+                    <h3 class="content-data contemporary__data">2016</h3>
+                    <p class="content-wrap content-text-next contemporary__paragraph">
+                        <span class="contemporary__panel--block"> В Кабардино-Балкарии
+                        введена
+                        в эксплуатацию
+                        Зарагижская ГЭС
+                            мощностью 30,6 МВт.</span>
+                        После трансформации в ГЭС-ГАЭС,
+                        Зеленчукская гидроэлектростанция
+                        стала третьей гидроаккумулирующей
+                        станцией нашей страны и повысила
+                        надежность работы энергосистемы
+                        юга России</p>
+                </div>
             </div>
+
             <div class="contemporary__panel--wrap wow slideInUp">
                 <div class="contemporary__panel--image">
                     <img src="img/home/loading.gif" data-src="img/contemporary/panel.png"
@@ -319,13 +337,7 @@
                     src="img/contemporary/next.svg" alt="Next"></button>
         </div>
         <div class="contemporary__eastern">
-            <div class="content-row contemporary__eastern--text wow fadeInLeft">
-                <h3 class="content-data contemporary__data">2016</h3>
-                <p class="content-wrap content-text-next contemporary__paragraph">В Кабардино-Балкарии
-                    введена в эксплуатацию
-                    Зарагижская ГЭС
-                    мощностью 30,6 МВт.</p>
-            </div>
+
             <div class="contemporary__eastern--wrap wow slideInUp">
                 <a id="single_image17" href="img/contemporary/eastern-big.jpg"
                    class="single_image  ">
@@ -1449,7 +1461,7 @@
                         </li>
                         <li class="interactive__info--item" id="result-2">
                             <span class="interactive__info--color">4-6 баллов</span>
-                            <span class="interactive__name">НЕПРИТЯЗАТЕЛЬНЫЙ</span>
+                            <span class="interactive__name">НАЧИНАЮЩИЙ ЭНЕРГЕТИК</span>
                             История российской энергетики хранит в себе немало интересного. Не лишайте себя удовольствия
                             узнать больше! Подтянуть знания и окунуться в хроники из жизни отечественной энергетики
                             поможет этот сайт.l
