--- a/year-2000.html
+++ b/year-2000.html
@@ -1194,7 +1194,7 @@
                         </li>
                         <li class="interactive__info--item" id="result-2">
                             <span class="interactive__info--color">4-6 баллов</span>
-                            <span class="interactive__name">НЕПРИТЯЗАТЕЛЬНЫЙ</span>
+                            <span class="interactive__name">НАЧИНАЮЩИЙ ЭНЕРГЕТИК</span>
                             История российской энергетики хранит в себе немало интересного. Не лишайте себя удовольствия
                             узнать больше! Подтянуть знания и окунуться в хроники из жизни отечественной энергетики
                             поможет этот сайт.l
