--- a/index.html
+++ b/index.html
@@ -993,19 +993,19 @@
                                     <button id="question-10-option-1" onclick="answer(10,1)"
                                             class="interactive__button content-row">
                                         <span class="interactive__button--circle"></span>
-                                        <span class="interactive__button--name">Более 70</span>
+                                        <span class="interactive__button--name">Менее 70</span>
                                     </button>
                                     <button id="question-10-option-2" onclick="answer(10,2)"
                                             class="interactive__button content-row">
                                         <span class="interactive__button--circle"></span>
-                                        <span class="interactive__button--name">Более 80</span>
+                                        <span class="interactive__button--name">Около 100</span>
                                     </button>
                                 </div>
                                 <div class="content-row interactive__row ">
                                     <button id="question-10-option-3" onclick="answer(10,3)"
                                             class="interactive__button content-row">
                                         <span class="interactive__button--circle"></span>
-                                        <span class="interactive__button--name">Более 90</span>
+                                        <span class="interactive__button--name">Около 200</span>
                                     </button>
                                     <button id="question-10-option-4" onclick="answer(10,4)"
                                             class="interactive__button content-row">
