editing page name

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>РусГидро - Главная</title>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <link href="style/css/reset.css" rel="stylesheet">
-    <link href="style/css/style.css?ver=27" rel="stylesheet">
+    <link href="style/css/style.css?ver=28" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css">
@@ -290,7 +290,8 @@
                 <p class="main__footer--name">«Здесь приступлено уже к устройствуm гидроэлектрических установок с тем,
                     чтобы использовать силу падения речных вод для выработки электрической энергии
                     и при посредстве этой последней мелиорировать болотистые пространства и превратить их в культурную
-                    землю» Из Плана ГОЭЛРО</p>
+                    землю»
+                    <span class="main__footer--block"> Из Плана ГОЭЛРО</span></p>
             </div>
         </div>
     </div>
@@ -1174,7 +1175,7 @@
                     </div>
                 </div>
                 <div class="interactive__item interactive__item--hidden" id="question_13">
-                    <div class="interactive__info--item" id="result-1">
+                    <div class="interactive__info--item interactive__box" id="result-1">
                         <img src="img/test/result1.png" alt=""  class="interactive__info--image">
                         <span class="interactive__name">В начале пути </span>
                         <p class="interactive__result">Вы набрали <span class="interactive__result--number"></span> баллов
@@ -1183,55 +1184,55 @@
                             и пройдите тест ещё раз!
 
                         </p>
-                        <div class="interactive__social">
-                            <a href="#">
+                        <div class="interactive__social content-row">
+                            <a href="#"  class="interactive__social--link">
                                 <img src="img/test/twitter.png" alt="twitter">
                             </a>
-                            <a href="#"><img src="img/test/vkontakte.png" alt="vkontakte"></a>
-                            <a href="#"><img src="img/test/facebook.png" alt="facebook"></a>
+                            <a href="#"  class="interactive__social--link"><img src="img/test/vkontakte.png" alt="vkontakte"></a>
+                            <a href="#"  class="interactive__social--link"><img src="img/test/facebook.png" alt="facebook"></a>
                         </div>
                     </div>
-                    <div class="interactive__info--item" id="result-2">
+                    <div class="interactive__info--item  interactive__box" id="result-2">
                         <img src="img/test/result2.png" alt="" class="interactive__info--image">
                         <span class="interactive__name">начинающий энергетик</span>
                         <p class="interactive__result">Вы набрали <span class="interactive__result--number"></span> баллов
                         </p>
                         <p class="interactive__depiction">История российской энергетики хранит в себе немало интересного. Не лишайте себя удовольствия узнать больше! Подтянуть знания
                             и окунуться в хроники из жизни отечественной энергетики поможет этот сайт.</p>
-                        <div class="interactive__social">
-                            <a href="#">
+                        <div class="interactive__social content-row">
+                            <a href="#" class="interactive__social--link">
                                 <img src="img/test/twitter.png" alt="twitter">
                             </a>
-                            <a href="#"><img src="img/test/vkontakte.png" alt="vkontakte"></a>
-                            <a href="#"><img src="img/test/facebook.png" alt="facebook"></a>
+                            <a href="#"  class="interactive__social--link"><img src="img/test/vkontakte.png" alt="vkontakte"></a>
+                            <a href="#"  class="interactive__social--link"><img src="img/test/facebook.png" alt="facebook"></a>
                         </div>
                     </div>
-                    <div class="interactive__info--item" id="result-3">
+                    <div class="interactive__info--item  interactive__box" id="result-3">
                         <img src="img/test/result1.png" alt=""  class="interactive__info--image">
                         <span class="interactive__name">УВЕРЕННЫЙ</span>
                         <p class="interactive__result">Вы набрали <span class="interactive__result--number"></span> баллов
                         </p>
                         <p class="interactive__depiction">Вы прекрасно разбираетесь в истории отечественной энергетики, но нет предела совершенству! Изучите наш сайт и вы найдете там еще больше интересной информации.</p>
-                        <div class="interactive__social">
-                            <a href="#">
+                        <div class="interactive__social content-row">
+                            <a href="#"  class="interactive__social--link">
                                 <img src="img/test/twitter.png" alt="twitter">
                             </a>
-                            <a href="#"><img src="img/test/vkontakte.png" alt="vkontakte"></a>
-                            <a href="#"><img src="img/test/facebook.png" alt="facebook"></a>
+                            <a href="#"  class="interactive__social--link"><img src="img/test/vkontakte.png" alt="vkontakte"></a>
+                            <a href="#"  class="interactive__social--link"><img src="img/test/facebook.png" alt="facebook"></a>
                         </div>
                     </div>
-                    <div class="interactive__info--item" id="result-4">
+                    <div class="interactive__info--item  interactive__box" id="result-4">
                         <img src="img/test/result1.png" alt=""  class="interactive__info--image">
                         <span class="interactive__name">НАСТОЯЩИЙ ЗНАТОК</span>
                         <p class="interactive__result">Вы набрали <span class="interactive__result--number"></span> баллов
                         </p>
                         <p class="interactive__depiction">Блестящий результат! Такое ощущение, что у истоков энергетики в России стояли именно вы! Кржижановский бы вами гордился! </p>
-                        <div class="interactive__social">
-                            <a href="#">
+                        <div class="interactive__social content-row">
+                            <a href="#"  class="interactive__social--link">
                                 <img src="img/test/twitter.png" alt="twitter">
                             </a>
-                            <a href="#"><img src="img/test/vkontakte.png" alt="vkontakte"></a>
-                            <a href="#"><img src="img/test/facebook.png" alt="facebook"></a>
+                            <a href="#"  class="interactive__social--link"><img src="img/test/vkontakte.png" alt="vkontakte"></a>
+                            <a href="#"  class="interactive__social--link"><img src="img/test/facebook.png" alt="facebook"></a>
                         </div>
                     </div>
                 </div>
