--- a/index.html
+++ b/index.html
@@ -1169,8 +1169,20 @@
                                     Плана ГОЭЛРО, свой профессиональный праздник отмечают энергетики России.
                                 </li>
                             </ul>
-                            <a href="#" data-src="12" onclick="getResults()" class="interactive__farther">Показать
-                                результат</a>
+                            <a href="#" data-src="12" onclick="getResults()" class="interactive__farther button">
+                                <div class="icon">
+                                    <div class="cannon"></div>
+                                    <div class="confetti">
+                                        <svg viewBox="0 0 18 16">
+                                            <polyline points="1 10 4 7 4 5 6 1"/>
+                                            <path d="M4,13 C5.33333333,9 7,7 9,7 C11,7 12.3340042,6 13.0020125,4"/>
+                                            <path d="M6,15 C7.83362334,13.6666667 9.83362334,12.6666667 12,12 C14.1663767,11.3333333 15.8330433,9.66666667 17,7"/>
+                                        </svg>
+                                        <i></i><i></i><i></i><i></i><i></i><i></i>
+                                        <div class="emitter"></div>
+                                    </div>
+                                </div>
+                                <span>Показать результат</span></a>
                         </div>
                     </div>
                 </div>
@@ -1217,7 +1229,7 @@
                         </div>
                     </div>
                     <div class="interactive__info--item  interactive__box" id="result-3">
-                        <img src="img/test/result1.png" alt="" class="interactive__info--image">
+                        <img src="img/test/result3.png" alt="" class="interactive__info--image">
                         <span class="interactive__name">УВЕРЕННЫЙ</span>
                         <p class="interactive__result">Вы набрали <span class="interactive__result--number"></span>
                             баллов
@@ -1236,7 +1248,7 @@
                         </div>
                     </div>
                     <div class="interactive__info--item  interactive__box" id="result-4">
-                        <img src="img/test/result1.png" alt="" class="interactive__info--image">
+                        <img src="img/test/result4.png" alt="" class="interactive__info--image">
                         <span class="interactive__name">НАСТОЯЩИЙ ЗНАТОК</span>
                         <p class="interactive__result">Вы набрали <span class="interactive__result--number"></span>
                             баллов
@@ -1314,6 +1326,8 @@
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+<script src = "https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js" ></script>
+<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/Physics2DPlugin3.min.js"></script>
 <script src="js/blazy.js"></script>
 <script src="js/main.js?ver=21"></script>
 </body>
