--- a/year-2010.html
+++ b/year-2010.html
@@ -483,7 +483,7 @@
             <div class="contemporary__starting--wrap contemporary__starting--wrapper wow fadeInRight">
                 <a id="single_image28" href="img/contemporary/transformer4.jpg"
                    class="single_image ">
-                    <img src="img/contemporary/transformer4.jpg" alt="схема сооружений гидроузла"
+                    <img src="img/contemporary/transformer4.jpg" alt="Сахалинская ГРЭС-2"
                          class=" content-image"></a>
                 <div class="contemporary__starting--info contemporary__starting--left">
                     <p class="content-text-white content-text-next">2019 г., Сахалинская ГРЭС-2</p>
@@ -494,7 +494,7 @@
             <div class="contemporary__starting--wrap wow fadeInLeft">
                 <a id="single_image29" href="img/contemporary/panorama3.jpg"
                    class="single_image ">
-                    <img src="img/contemporary/panorama3.jpg" alt="схема сооружений гидроузла"
+                    <img src="img/contemporary/panorama3.jpg" alt="Якутская ГРЭС-2"
                          class=" content-image"></a>
                 <div class="contemporary__starting--info contemporary__starting--inner">
                     <p class="content-text-white content-text-next">2017 г., Якутская ГРЭС-2 </p>
@@ -519,7 +519,7 @@
             <div class="contemporary__starting--wrap contemporary__starting--wrapper wow fadeInRight">
                 <a id="single_image30" href="img/contemporary/foreword.png"
                    class="single_image ">
-                    <img src="img/contemporary/foreword.png" alt="схема сооружений гидроузла"
+                    <img src="img/contemporary/foreword.png" alt="ТЭЦ в городе Советская Гавань"
                          class=" content-image"></a>
                 <div class="contemporary__starting--info contemporary__starting--left">
                     <p class="content-text-white content-text-next">2020 г., ТЭЦ в городе Советская Гавань</p>
