--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>РусГидро - Главная</title>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <link href="style/css/reset.css" rel="stylesheet">
-    <link href="style/css/style.css?ver=30" rel="stylesheet">
+    <link href="style/css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css">
@@ -1315,6 +1315,6 @@
 <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
 <script src="js/blazy.js"></script>
-<script src="js/main.js?ver=21"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
