--- a/year-1930.html
+++ b/year-1930.html
@@ -75,7 +75,7 @@
                 <div class="header__film--box">
                     <video class="header__film--inner" autoplay="autoplay" muted loop="loop" playsinline
                                      preload="auto"
-                                     poster="img/home/video.jpg" src="https://logo-outsourcing.github.io/Hydro/video/saver.mp4">
+                                     poster="img/home/video.jpg" src="http://rusgidro.intelgroup.ru/film-preview.mp4">
                 </video>
                     <div class="header__info">
                         <img src="img/home/play.png" alt="Play" class="header__play">
