--- a/year-2000.html
+++ b/year-2000.html
@@ -87,7 +87,13 @@
                 <div class="header__film--wrap">
 
                 </div>
-                <a href="#" class="header__film--close"><img src="img/test/close-film.svg" alt="close"></a>
+                <a href="#" class="header__film--close">
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="16" cy="16" r="15.5"/>
+                        <path d="M8 8L16 16L24 24"/>
+                        <path d="M8 24L16 16L24 8"/>
+                    </svg>
+                </a>
             </div>
         </div>
     </div>
@@ -111,7 +117,13 @@
                     <div class="header__film--wrap">
 
                     </div>
-                    <a href="#" class="header__film--close"><img src="img/test/close-film.svg" alt="close"></a>
+                    <a href="#" class="header__film--close">
+                        <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="16" cy="16" r="15.5"/>
+                            <path d="M8 8L16 16L24 24"/>
+                            <path d="M8 24L16 16L24 8"/>
+                        </svg>
+                    </a>
                 </div>
             </div>
         </div>
